# LizardMorph

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  GCLOUD.md  LizardMorph.sln  Makefile  README.md  SETUP.md  app.py  app_wsgi.py  clear-history.sh  cloudbuild.yaml  convert_yolo_to_onnx.py  deploy.md  deploy.ps1  deploy.sh  deploy_app.md  detect_lizard_toepads.py  docker-compose.monitoring.yml  docker-compose.yml  dockerfile  drosophila_training.webm  gcloud_deploy.md  gunicorn.conf.py  main.html  optimize_onnx_model.py  requirements.txt  tutorial.md
LizardMorph.MCP/: LizardMorph.MCP.csproj  LizardMorph.MCP.sln  Program.cs  README.md
backend/: PtToONNX.ipynb  app.py  constants.py  debug_startup.py  environment.yml  export_handler.py  id_extractor.py  inference.py  native_ocr.py  ort_inference.py  output_0003_dorsal - Copy (4)_1746243375_5353.jpg.csv  output_0003_dorsal - Copy (4)_1746243375_5353.jpg.csv.1746243391.bak  output_0003_dorsal - Copy (4)_1746243375_5353.jpg.tps  output_0003_dorsal - Copy (4)_1746243375_5353.jpg.xml  (+21 more)
mcp_server/: Dockerfile  README.md  claude_config.json  docker-compose.yml  install.py  main.py  pyproject.toml  start_server.py  test_client.py  test_mcp_server.py  usage_examples.py  utils.py
model-api/: Dockerfile  config.py  main.py  pyproject.toml
model-api/docs/: 2026-03-13-mlflow-fastapi-design.md  DEVELOPMENT.md  metadata (1).json
model-api/models/: schemas.py
model-api/routers/: experiments.py  models.py
model-api/tests/: conftest.py  test_config.py  test_experiments.py  test_main.py  test_models.py  test_schemas.py
(+155 files in other folders)
