[project]
name = "lizardmorph-model-api"
version = "0.1.0"
description = "LizardMorph MLflow read-only API service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "mlflow==2.13.0",
    "setuptools",
    "httpx==0.27.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "datasette",
]

[tool.pytest.ini_options]
pythonpath = ["."]
